--- a/public/css/sass/layouts/_portfolio.scss
+++ b/public/css/sass/layouts/_portfolio.scss
@@ -1,16 +1,10 @@
-/*--------------------------------------------------------------
-# Portfolio
---------------------------------------------------------------*/
+/* ===================Portfolio section ==================*/
 
-.portfolio .portfolio-item {
-    margin-bottom: 30px;
-}
+
+/* menu */
 
 .portfolio #portfolio-menu {
-    padding: 0;
-    margin: 0 auto 35px auto;
     list-style: none;
-    text-align: center;
     background: $color-1;
     border-radius: 50px;
     box-shadow: 0px 3px 7px 1px rgba(0, 0, 0, 0.5);
@@ -70,6 +64,9 @@
         color: $color-2;
     }
 }
+
+
+/* box */
 
 .portfolio-box {
     overflow: hidden;
