--- a/public/css/sass/layouts/_skills.scss
+++ b/public/css/sass/layouts/_skills.scss
@@ -1,3 +1,5 @@
+/* ===================skills section ==================*/
+
 .container-skills {
     width: 100%;
     flex-wrap: wrap;
@@ -51,7 +53,6 @@
                 -webkit-animation-delay: $animation-delay;
                 animation-delay: $animation-delay;
             }
-            /*ommage des animations et delai des animations*/
             .progressbar#progress-html {
                 -webkit-animation-name: progress-html;
                 animation-name: progress-html;
@@ -115,6 +116,9 @@
         }
     }
 }
+
+
+/* bars animation */
 
 @-webkit-keyframes progress-html {
     0% {
