--- a/public/css/sass/layouts/_social.scss
+++ b/public/css/sass/layouts/_social.scss
@@ -1,10 +1,5 @@
-	@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
-	$transition: all 0.3s cubic-bezier(0.68,
-	-0.55,
-	0.265,
-	1.55);
+	$transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 	.wrapper {
-	    font-family: "Poppins", sans-serif;
 	    display: flex;
 	    justify-content: center;
 	    .icon {
