--- a/public/css/sass/layouts/_testimonial.scss
+++ b/public/css/sass/layouts/_testimonial.scss
@@ -1,6 +1,4 @@
-/*--------------------------------------------------------------
-# Testimonials
---------------------------------------------------------------*/
+/* ===================Testimonials section ==================*/
 
 .testimonials .testimonial-item {
     box-sizing: content-box;
