--- a/public/css/sass/layouts/_social.scss
+++ b/public/css/sass/layouts/_social.scss
@@ -1,3 +1,5 @@
+	/* ===================social section ==================*/
+	
 	$transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 	.wrapper {
 	    display: flex;
